--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <div id="content">
     </div>
     <div id="footer">
-      <a href="#">
+      <a href="#hello">
         <div class="button" id="green">
           Hello!
         </div>
