--- a/src/personal_site/index.html
+++ b/src/personal_site/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Allersma - Homepage</title>
+    <meta name="application-name" content="Jan Allersma">
+    <meta name="msapplication-TileColor" content="#FF6883">
+    <meta name="theme-color" content="#FF6883">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Jan Allersma</title>
     <link rel="stylesheet" href="/personal_site/styles/index.css">
     <link rel="stylesheet" href="/personal_site/styles/buttons.css">
     <link rel="manifest" href="/personal_site/manifest.webmanifest">
@@ -18,7 +22,7 @@
     <div id="footer">
       <a href="#hello">
         <div class="button" id="green">
-          Hello!
+          Hallo!
         </div>
       </a>
       <a href="#about">
@@ -26,7 +30,7 @@
           Over mij
         </div>
       </a>
-      <a href="zxcvbn.html">
+      <a href="/personal_site/zxcvbn.html">
         <div class="button" id="red">
           Beveiliging
         </div>
