--- a/src/personal_site/index.html
+++ b/src/personal_site/index.html
@@ -30,9 +30,9 @@
           Over mij
         </div>
       </a>
-      <a href="/personal_site/zxcvbn.html">
+      <a href="#apps">
         <div class="button" id="red">
-          Beveiliging
+          Apps
         </div>
       </a>
     </div>
